[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dtn7zero"
version = "0.0.5"
authors = [
    {name = "Lukas Holst", email = "lh700@proton.me"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = {text = "AGPL-3.0"}
dependencies = [
    "requests",
    "cbor2",
    "netifaces",
    "py-dtn7 >= 0.3.0a1"
]

[project.urls]
"Homepage" = "https://github.com/dtn7/dtn7zero"
"Repository" = "https://github.com/dtn7/dtn7zero"

[tool.setuptools]
packages = ["dtn7zero", "dtn7zero.convergence_layer_adapters", "dtn7zero.routers", "dtn7zero.storage"]
